# notebooks

./: Asdf Generate.ipynb  BNYKX  BRMYN  Explore pid_1_118.ipynb  Hinode.ipynb  L2 Explore.ipynb  Multidimensional Arrays.ipynb  hinode  pid_1_118  setup.cfg  write_coalign.ipynb
inversion_output/: explore_map.py  scan1807
src/datasets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
