[metadata]
name = datasets
version = 0.1.0
author = Sean Hess
author_email = shess@nso.edu
description = Explore datasets
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
  astropy >= 4.0
  numpy>=1.20  # For numpy typing support
  matplotlib >= 3

[options.packages.find]
where = src
